# chessica

./: Cargo.toml  Dockerfile  README.md  assembly_profiling.sh  chessica.sh  compile.sh  test.sh
.devcontainer/: devcontainer.json
src/: .main.rs.swp  main.rs
src/args/: ab.rs  mod.rs  profile.rs
src/bitops/: const.rs  mod.rs
src/cogitator/: mod.rs
src/operator/: instructions.rs  message.rs  mod.rs
src/orchestrator/: actions.rs  const.rs  mod.rs
src/reset/: .mod.rs.swp  ab.rs  bishop.rs  capture.rs  child.rs  clone.rs  const.rs  fen.rs  hash.rs  helpers.rs  init_child.rs  king.rs  knight.rs  mod.rs  move.rs  moves.rs  pawn.rs  pinned.rs  print.rs  profiling.rs  queen.rs  rook.rs  safe.rs  safe_direct.rs  safe_revealed.rs  score.rs  test_helpers.rs
src/reset/init/: mod.rs
src/tree/: ab.rs  ab_in_place.rs  ab_iterative_keep_depth.rs  ab_iterative_keep_depth_promote.rs  ab_iterative_keep_depth_swap.rs  ab_iterative_promote_prune.rs  ab_keep_depth.rs  ab_keep_depth_promote.rs  ab_keep_depth_swap.rs  ab_promote_prune.rs  ab_promote_prune_parallel.rs  const.rs  mod.rs  moves.rs
src/utils/: mod.rs
tests/: perft.rs
