[package]
name = "chessica"
version = "0.0.0"
edition = "2021"
rust-version = "1.63"

[lib]
name = "chessica"
path = "src/main.rs"

[dependencies]
lazy_static = "1.4.0"
enum-map = "2.4.1"
ansi_term = "0.12.1"
num-format = "0.4.4"

[profile.dev]
opt-level = 3

[profile.burn]
inherits = "release"
debug = 2

[profile.release]
opt-level = 3
